# artbox

./: .makim.yaml  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/workflows/: main.yaml  release.yaml
api/references/: index.html
changelog/: index.html
conda/: dev.yaml
contributing/: index.html
docs/: changelog.md  contributing.md  index.md  installation.md  projects.md
installation/: index.html
projects/: index.html
search/: search_index.json
src/artbox/: __init__.py  __main__.py  base.py  cli.py  engines.py  init.py  render.py  schema.json  sounds.py  speech.py  videos.py
src/artbox/schemas/: render_project.json
tests/: __init__.py  test_init.py  test_render.py  test_sounds.py  test_speech.py  test_videos.py
tests/data/slides/: open-science-labs-deck-demo.pptx
tests/smoke/: .makim-smoke.yaml  test_project.yaml
